--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
 before_script:
   - echo "no tests"
 
+#create and tag the docker image
 script:
   - docker --version # print the version for logging
   - docker build -t simple-express .
