--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 events {
 }
 http {
-  server {
-      listen 8080;
-      location /api/ {
-          proxy_pass http://<REDIRECT_PATH>/;
-      }
-  }
+    server {
+        listen 8080;
+        location /api/ {
+            proxy_pass http://my-app-2-svc:8080/;
+        }
+    }
 }
