--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -1,54 +1,29 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: reverseproxy
-  name: reverseproxy
+    labels:
+        app: reverseproxy
+    name: reverseproxy
 spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        service: reverseproxy
-    spec:
-      containers:
-      - image: emanana/simple-express
-        name: reverseproxy
-        imagePullPolicy: Always          
-        resources:
-          requests:
-            memory: "64Mi"
-            cpu: "250m"
-          limits:
-            memory: "1024Mi"
-            cpu: "500m"       
-        ports:
-        - containerPort: 8080
-      restartPolicy: Always
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: my-app-2
-#   labels:
-#     app: my-app-2
-# spec:
-#   replicas: 2
-#   selector:
-#     matchLabels:
-#       app: my-app-2
-#   template:
-#     metadata:
-#       labels:
-#         app: my-app-2
-#     spec:
-#       containers:
-#       - name: simple-express
-#         image: emanana/simple-express
-#         ports:
-#         - containerPort: 8080
-#         livenessProbe:
-#           httpGet:
-#             path: /health
-#             port: 8080
-#           initialDelaySeconds: 3
-#           periodSeconds: 3
+    replicas: 1
+    selector:
+        matchLabels:
+            app: reverseproxy
+    template:
+        metadata:
+            labels:
+                app: reverseproxy
+        spec:
+            containers:
+            - image: emanana/simple-express
+              name: reverseproxy
+              resources:
+                requests:
+                    memory: "64Mi"
+                    cpu: "250m"
+                limits:
+                    memory: "1024Mi"
+                    cpu: "500m"
+              ports:
+              - containerPort: 8080
+            restartPolicy: Always
