--- a/deploy/reverseproxy_service.yaml
+++ b/deploy/reverseproxy_service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   labels:
     service: reverseproxy
-  name: reverseproxy-service
+  name: reverseproxy-svc
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
-  selector: 8080
+  selector:
     service: reverseproxy
